<resources>
    <string name="app_name">AllSpark</string>
    <string name="title_home">Transformers</string>
    <string name="title_create">Create</string>
    <string name="title_battle">Battle</string>
    <string name="lbl_no_transformers">You have no Transformers.\nPlease create some.</string>
    <string name="lbl_team_icon">Team Icon</string>

    <string name="lbl_strength">Strength</string>
    <string name="lbl_intelligence">Intelligence</string>
    <string name="lbl_speed">Speed</string>
    <string name="lbl_endurance">Endurance</string>
    <string name="lbl_rank">Rank</string>
    <string name="lbl_courage">Courage</string>
    <string name="lbl_firepower">Firepower</string>
    <string name="lbl_skill">Skill</string>

    <string name="lbl_strength_short">S</string>
    <string name="lbl_intelligence_short">I</string>
    <string name="lbl_speed_short">S</string>
    <string name="lbl_endurance_short">E</string>
    <string name="lbl_rank_short">R</string>
    <string name="lbl_courage_short">C</string>
    <string name="lbl_firepower_short">F</string>
    <string name="lbl_skill_short">S</string>
    <string name="lbl_value_not_set">0</string>
    <string name="lbl_name">Name:</string>
    <string name="lbl_string_not_set">NOT SET</string>
    <string name="lbl_details">Details</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="lbl_random_edit">Random Edit</string>
    <string name="lbl_ok">OK</string>
    <string name="lbl_yes">YES</string>
    <string name="lbl_no">NO</string>
    <string name="lbl_delete">Delete</string>
    <string name="lbl_transformer_image">Transformer Image</string>
    <string name="lbl_allspark_explained">The AllSpark will randomly generate a transformer.\nSelect the team a see what you get.</string>
    <string name="lbl_confirm_delete">Are you sure you want to delete this Transformer?</string>
    <string name="lbl_confirm_edit">Edit mode will only set new random values for your Transformer. Do you want to proceed?</string>
    <string name="lbl_delete_success">Transformer deleted successfully.</string>
    <string name="lbl_delete_fail">An error occurred while deleting.</string>
    <string name="lbl_edit_success">Transformer edited successfully.</string>
    <string name="lbl_edit_fail">An error occurred while editing.</string>
    <string name="lbl_create_success">Transformer created successfully.</string>
    <string name="lbl_create_fail">An error occurred while creating the a Transformer.</string>
    <string name="lbl_start_battle">START BATTLE</string>

    <string name="lbl_creating">CREATING&#8230;</string>
    <string name="lbl_deleting">DELETING&#8230;</string>
    <string name="lbl_editing">EDITING&#8230;</string>

    <string name="str_battle">%d battle</string>
    <string name="str_battles">%d battles</string>
    <string name="str_not_enough">You don\'t have enough Transformers to start a battle.\nYou must have at least one on both teams.</string>
    <string name="str_all_destroyed">All Transformers were destroyed in the battle.</string>
    <string name="str_battle_tie">There was a tie in battle.</string>
    <string name="str_winners">Winning team (%s): %s</string>
    <string name="str_losers">Survivors from the losing team (%s): %s</string>
    <string name="str_no_survivors">No survivors.</string>

    <string name="str_server_fail">An error occurred:\n%s\nPlease check your Internet connection and try again later.</string>
    <string name="str_token_fail">Unable to access AllSpark servers.</string>
    <string name="str_load_fail">Unable to get data from AllSpark servers.</string>
</resources>
