<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imgTeamIcon"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/lbl_team_icon" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/transformers"
                    android:text="@string/lbl_name"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_string_not_set" />

            </LinearLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow>

                    <TextView
                        android:layout_weight="1"
                        android:text="@string/lbl_strength_short"
                        android:fontFamily="@font/transformers"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_weight="1"
                        android:text="@string/lbl_intelligence_short"
                        android:fontFamily="@font/transformers"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_weight="1"
                        android:text="@string/lbl_speed_short"
                        android:fontFamily="@font/transformers"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_weight="1"
                        android:text="@string/lbl_endurance_short"
                        android:fontFamily="@font/transformers"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_weight="1"
                        android:text="@string/lbl_rank_short"
                        android:fontFamily="@font/transformers"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_weight="1"
                        android:text="@string/lbl_courage_short"
                        android:fontFamily="@font/transformers"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_weight="1"
                        android:text="@string/lbl_firepower_short"
                        android:fontFamily="@font/transformers"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_weight="1"
                        android:text="@string/lbl_skill_short"
                        android:fontFamily="@font/transformers"
                        android:textAlignment="center" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/txtStrength"
                        android:layout_weight="1"
                        android:text="@string/lbl_value_not_set"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/txtIntelligence"
                        android:layout_weight="1"
                        android:text="@string/lbl_value_not_set"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/txtSpeed"
                        android:layout_weight="1"
                        android:text="@string/lbl_value_not_set"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/txtEndurance"
                        android:layout_weight="1"
                        android:text="@string/lbl_value_not_set"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/txtRank"
                        android:layout_weight="1"
                        android:text="@string/lbl_value_not_set"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/txtCourage"
                        android:layout_weight="1"
                        android:text="@string/lbl_value_not_set"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/txtFirepower"
                        android:layout_weight="1"
                        android:text="@string/lbl_value_not_set"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/txtSkill"
                        android:layout_weight="1"
                        android:text="@string/lbl_value_not_set"
                        android:textAlignment="center" />
                </TableRow>
            </TableLayout>

        </LinearLayout>

        <ImageButton
            android:src="@drawable/ic_info"
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/btnInfo"
            android:layout_width="48dp"
            android:layout_height="48dp" />


    </LinearLayout>
</android.support.v7.widget.CardView>