<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyBg"
    android:orientation="vertical"
    tools:context=".activity.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/imgTransformer"
                        android:layout_width="240dp"
                        android:layout_height="280dp"
                        android:layout_marginBottom="8dp"
                        android:contentDescription="@string/lbl_transformer_image"
                        android:src="@drawable/card_placeholder" />

                    <ImageView
                        android:id="@+id/imgTeamIcon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginBottom="8dp"
                        android:contentDescription="@string/lbl_team_icon" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:fontFamily="@font/transformers"
                            android:text="@string/lbl_name"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/txtName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lbl_string_not_set" />
                    </LinearLayout>

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TableRow>

                            <TextView
                                android:layout_weight="1"
                                android:fontFamily="@font/transformers"
                                android:text="@string/lbl_strength"
                                android:textAlignment="center" />

                            <TextView
                                android:id="@+id/txtStrength"
                                android:layout_weight="1"
                                android:text="@string/lbl_value_not_set"
                                android:textAlignment="center" />
                        </TableRow>

                        <TableRow>

                            <TextView
                                android:layout_weight="1"
                                android:fontFamily="@font/transformers"
                                android:text="@string/lbl_intelligence"
                                android:textAlignment="center" />

                            <TextView
                                android:id="@+id/txtIntelligence"
                                android:layout_weight="1"
                                android:text="@string/lbl_value_not_set"
                                android:textAlignment="center" />
                        </TableRow>

                        <TableRow>

                            <TextView
                                android:layout_weight="1"
                                android:fontFamily="@font/transformers"
                                android:text="@string/lbl_speed"
                                android:textAlignment="center" />

                            <TextView
                                android:id="@+id/txtSpeed"
                                android:layout_weight="1"
                                android:text="@string/lbl_value_not_set"
                                android:textAlignment="center" />
                        </TableRow>

                        <TableRow>

                            <TextView
                                android:layout_weight="1"
                                android:fontFamily="@font/transformers"
                                android:text="@string/lbl_endurance"
                                android:textAlignment="center" />

                            <TextView
                                android:id="@+id/txtEndurance"
                                android:layout_weight="1"
                                android:text="@string/lbl_value_not_set"
                                android:textAlignment="center" />
                        </TableRow>

                        <TableRow>

                            <TextView
                                android:layout_weight="1"
                                android:fontFamily="@font/transformers"
                                android:text="@string/lbl_rank"
                                android:textAlignment="center" />

                            <TextView
                                android:id="@+id/txtRank"
                                android:layout_weight="1"
                                android:text="@string/lbl_value_not_set"
                                android:textAlignment="center" />
                        </TableRow>

                        <TableRow>

                            <TextView
                                android:layout_weight="1"
                                android:fontFamily="@font/transformers"
                                android:text="@string/lbl_courage"
                                android:textAlignment="center" />

                            <TextView
                                android:id="@+id/txtCourage"
                                android:layout_weight="1"
                                android:text="@string/lbl_value_not_set"
                                android:textAlignment="center" />
                        </TableRow>

                        <TableRow>

                            <TextView
                                android:layout_weight="1"
                                android:fontFamily="@font/transformers"
                                android:text="@string/lbl_firepower"
                                android:textAlignment="center" />

                            <TextView
                                android:id="@+id/txtFirepower"
                                android:layout_weight="1"
                                android:text="@string/lbl_value_not_set"
                                android:textAlignment="center" />
                        </TableRow>

                        <TableRow>

                            <TextView
                                android:layout_weight="1"
                                android:fontFamily="@font/transformers"
                                android:text="@string/lbl_skill"
                                android:textAlignment="center" />

                            <TextView
                                android:id="@+id/txtSkill"
                                android:layout_weight="1"
                                android:text="@string/lbl_value_not_set"
                                android:textAlignment="center" />
                        </TableRow>
                    </TableLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="4dp">

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_random_edit" />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_ok" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_delete" />
    </LinearLayout>

</LinearLayout>